--- a/marvelTest.html
+++ b/marvelTest.html
@@ -7,15 +7,15 @@
 <body>
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
-<script>
+<script type="text/javascript">
 	var queryURL = "https://gateway.marvel.com:443/v1/public/characters?name=wolverine&apikey=2da61ccae36a2d935be6acf3e8901868"
 
 	$.ajax({
-			url: queryURL,
-			method: 'GET',
-		}).done(function(response){
-			console.log(response);
-		});
+		url: queryURL,
+		method: 'GET',
+	}).done(function(response) {
+		console.log(response);
+	});
 </script>
 	
 </body>
