--- a/marvelTest.html
+++ b/marvelTest.html
@@ -8,20 +8,23 @@
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
 <script type="text/javascript">
-	var settings = {
- "async": true,
- "crossDomain": true,
- "url": "https://gateway.marvel.com:443/v1/public/characters?name=wolverine&apikey=1da61ccae36a2d935be6acf3e8901868",
- "method": "GET",
- "headers": {
-   "cache-control": "no-cache",
-   "postman-token": "8e001bcb-bb37-3dbf-48e7-ba51519fc4bc"
- }
-}
+	var PRIV_KEY = "feb2aceadb1a26296c6979ccc191a9fc7db1498f";     
+	var PUBLIC_KEY = "2da61ccae36a2d935be6acf3e8901868";
 
-$.ajax(settings).done(function (response) {
- console.log(response);
-});
+        
+
+    var ts = new Date().getTime();
+    var hash = md5(ts + PRIV_KEY + PUBLIC_KEY.toString());
+    console.log(hash);
+
+    var marvelAPI = "https://gateway.marvel.com/v1/public/comics?ts=" + ts + "&apikey=" + PUBLIC_KEY + "&hash=" + hash;
+    $.ajax  ({
+       dataType: "json",
+       url: marvelAPI
+    }).done(function(data) {
+             // sort of a long dump you will need to sort through
+        console.log(data);
+    });
 </script>
 	
 </body>
