--- a/marvelTest.html
+++ b/marvelTest.html
@@ -7,15 +7,14 @@
 <body>
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
-<script type="text/javascript">
+<script>
 	var PRIV_KEY = "feb2aceadb1a26296c6979ccc191a9fc7db1498f";     
 	var PUBLIC_KEY = "2da61ccae36a2d935be6acf3e8901868";
 
         
 
     var ts = new Date().getTime();
-    var hash = md5(ts + PRIV_KEY + PUBLIC_KEY.toString());
-    console.log(hash);
+    var hash = "301cc66ea78b36c904bef4d33fb1bd02"
 
     var marvelAPI = "https://gateway.marvel.com/v1/public/comics?ts=" + ts + "&apikey=" + PUBLIC_KEY + "&hash=" + hash;
     $.ajax  ({
