--- a/marvelTest.html
+++ b/marvelTest.html
@@ -7,7 +7,7 @@
 <body>
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
-<script>
+<script type="text/javascript">
 	var PRIV_KEY = "feb2aceadb1a26296c6979ccc191a9fc7db1498f";     
 	var PUBLIC_KEY = "2da61ccae36a2d935be6acf3e8901868";
 
