--- a/marvelTest.html
+++ b/marvelTest.html
@@ -11,7 +11,7 @@
 	var PRIV_KEY = "feb2aceadb1a26296c6979ccc191a9fc7db1498f";     
 	var PUBLIC_KEY = "2da61ccae36a2d935be6acf3e8901868";
 
-	cinsole.log("hey");       
+	console.log("hey");       
 
     var ts = new Date().getTime();
     var hash = "301cc66ea78b36c904bef4d33fb1bd02"
