--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	<title>marvel</title>
 </head>
 <body>
-<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
 
 <script type="text/javascript">
 	var PRIV_KEY = "feb2aceadb1a26296c6979ccc191a9fc7db1498f";     
