--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     var ts = 1;
     var hash = "301cc66ea78b36c904bef4d33fb1bd02";
 
-    var marvelAPI = "https://gateway.marvel.com/v1/public/comics?ts=" + ts + "&apikey=" + PUBLIC_KEY + "&hash=" + hash;
+    var marvelAPI = "https://gateway.marvel.com:443/v1/public/characters?name=wolverine?ts=" + ts + "&apikey=" + PUBLIC_KEY + "&hash=" + hash;
     $.ajax  ({
        dataType: "json",
        url: marvelAPI
